// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package tilestream;

import "mojo/core/time.proto";
import "mojo/core/value.proto";
import "mojo/mojo.proto";

option go_package = "github.com/ncraft-io/tilestream/go/pkg/tilestream;tilestream";
option java_multiple_files = true;
option java_outer_classname = "LayerProto";
option java_package = "io.ncraft.tilestream";

message Layer {
    string id = 1;
    string name = 2;
    string type = 3;
    bool templated = 4;
    mojo.core.Object config = 5 [(mojo.db_json)=true];
    string description = 6;
    mojo.core.Timestamp create_time = 100;
    mojo.core.Timestamp update_time = 101;
}